# atsam3x8e

./: .gitignore  Cargo.toml  README.md  build.rs  device.x
src/: adc.rs  can0.rs  chipid.rs  dacc.rs  dmac.rs  efc0.rs  emac.rs  generic.rs  gpbr.rs  hsmci.rs  lib.rs  matrix.rs  piob.rs  pioc.rs  pmc.rs  pwm.rs  rstc.rs  rtc.rs  rtt.rs  smc.rs  spi0.rs  ssc.rs  supc.rs  tc1.rs  trng.rs  twi1.rs  uart.rs  uotghs.rs  usart0.rs  wdt.rs
src/adc/: acr.rs  cdr.rs  cgr.rs  chdr.rs  cher.rs  chsr.rs  cor.rs  cr.rs  cwr.rs  emr.rs  idr.rs  ier.rs  imr.rs  isr.rs  lcdr.rs  mr.rs  over.rs  rncr.rs  rnpr.rs  seqr1.rs  seqr2.rs
src/can0/: acr.rs  br.rs  idr.rs  ier.rs  mam0.rs  mam2.rs  mam4.rs  mam5.rs  mcr0.rs  mcr1.rs  mcr3.rs  mcr4.rs  mdh3.rs  mdh4.rs  mdh6.rs  mdh7.rs  mdl1.rs  mdl2.rs  mdl3.rs  mdl5.rs  mfid0.rs  mfid1.rs  mfid2.rs  mfid3.rs  mfid4.rs  mfid6.rs  mfid7.rs  mid4.rs  mid5.rs  mid6.rs  mmr0.rs  mmr1.rs  mmr3.rs  mmr4.rs  mmr5.rs  mmr6.rs  mr.rs  msr4.rs  msr5.rs  tim.rs  (+2 more)
src/can1/: ecr.rs  imr.rs  mam1.rs  mam3.rs  mam6.rs  mam7.rs  mcr2.rs  mcr5.rs  mcr6.rs  mcr7.rs  mdh0.rs  mdh1.rs  mdh2.rs  mdh5.rs  mdl0.rs  mdl4.rs  mdl6.rs  mdl7.rs  mfid5.rs  mid0.rs  mid1.rs  mid2.rs  mid3.rs  mid7.rs  mmr2.rs  mmr7.rs  msr0.rs  msr1.rs  msr2.rs  msr3.rs  msr6.rs  msr7.rs  sr.rs  tcr.rs
src/chipid/: cidr.rs  exid.rs
src/dacc/: acr.rs  cdr.rs  chdr.rs  cher.rs  chsr.rs  cr.rs  idr.rs  ier.rs  imr.rs  isr.rs  mr.rs  wpsr.rs
src/dmac/: cfg0.rs  cfg1.rs  cfg2.rs  cfg3.rs  cfg4.rs  cfg5.rs  chdr.rs  cher.rs  chsr.rs  creq.rs  ctrla0.rs  ctrla1.rs  ctrla2.rs  ctrla3.rs  (+34 more)
(+645 files in other folders)
